--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 <div class="card-body fade-in">
-		    <h2>Croissant</h2>
+		    <h2>Croissants</h2>
 								<p class="card-text">Everyone loves a croissant! Made with organic flour and really expensive butter. </p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
@@ -262,7 +262,7 @@
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2>Pain au chocolat</h2>
+								<h2>Pains au chocolat</h2>
 								<p class="card-text">What's better than a croissant? A croissant with chocolate inside it!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
@@ -271,7 +271,7 @@
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2>Blueberry scone</h2>
+								<h2>Blueberry scones</h2>
 								<p class="card-text">Welcome to the scone zone. Made with organic flour and giant organic blueberries.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
@@ -280,7 +280,7 @@
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2>Choconut cookie</h2>
+								<h2>Choconut cookies</h2>
 								<p class="card-text">A huge, chewy, chocolate chip cookie with coconut flakes and pecans.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
