--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Fredoka+One&family=Open+Sans&display=swap" rel="stylesheet">
-		<script>
-		console.log("Hello world!");
-		</script>
 		<style>
 			html, body {
 				line-height: 1.3;
@@ -40,6 +37,10 @@
 				}
 			h2 {
 				font-size: 2rem;
+				color: #fed101;
+				}
+			h3 {
+				font-size: 1.5rem;
 				color: #fed101;
 				}
 			.card img {
@@ -130,6 +131,9 @@
 				font-size: 1rem;
 				font-family: 'Open Sans', sans-serif;
 				}
+			form {
+				font-family: 'Open Sans', sans-serif;
+			}
 			.howitworks {
 				font-size: 1.2rem;
 				}
@@ -232,6 +236,31 @@
 			  0% {opacity:0;}
 			  100% {opacity:1;}
 			}
+/* MailChimp Form Embed Code - Horizontal Super Slim - 12/16/2015 v10.7
+Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
+#mc_embed_signup{clear:left; width:100%;}
+#mc_embed_signup form {text-align:center; padding:10px 0 10px 0;}
+.mc-field-group { display: inline-block; } /* positions input field horizontally */
+#mc_embed_signup input.email {font-size: 15px; border: none;  -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; color: #343434; background-color: #fff; box-sizing:border-box; height:32px; padding: 0px 0.4em; display: inline-block; margin: 0; width:350px; vertical-align:top;}
+#mc_embed_signup label {display:block; font-size:16px; padding-bottom:10px; font-weight:bold;}
+#mc_embed_signup .clear {display: inline-block;} /* positions button horizontally in line with input */
+#mc_embed_signup .foot {display:inline; width:100%; height:32px; align-items:center;}
+
+@media screen and (max-width:400px) {#mc_embed_signup .referralBadge {width:50%;}}
+
+#mc_embed_signup .optionalParent {display:inline-block;}
+#mc_embed_signup .button {font-size: 13px; border: none; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; letter-spacing: .03em; color: #5c1e59; background-color: #FED101; box-sizing:border-box; height:32px; line-height:32px; padding:0 18px; display: inline-block; margin: 0; transition: all 0.23s ease-in-out 0s;}
+#mc_embed_signup .button:hover {background-color:#777; cursor:pointer;}
+#mc_embed_signup div#mce-responses {float:left; top:-1.4em; padding:0em .5em 0em .5em; overflow:hidden; width:90%;margin: 0 5%; clear: both;}
+#mc_embed_signup div.response {margin:1em 0; padding:1em .5em .5em 0; font-weight:bold; float:left; top:-1.5em; z-index:1; width:80%;}
+#mc_embed_signup #mce-error-response {display:none;}
+#mc_embed_signup #mce-success-response {color:#529214; display:none;}
+#mc_embed_signup label.error {display:block; float:none; width:auto; margin-left:1.05em; text-align:left; padding:.5em 0;}
+@media (max-width: 768px) {
+    #mc_embed_signup input.email {width:100%; margin-bottom:5px;}
+    #mc_embed_signup .clear {display: block; width: 100% }
+    #mc_embed_signup .button {width: 100%; margin:0; }
+}
 
 		</style>
 	</head>
@@ -345,7 +374,7 @@
 			<div class="yellowline col-2 mx-auto"></div>
 			<div class="">
 				<div class="py-4 col-md-12 mx-auto text-center">
-					<h2 class="">faqs</h2>
+					<h2>faqs</h2>
 					<div class="mb-0 faqs text-center">
 						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool.</span></div>
 						<div class="mb-3"><p class="mb-1">My nephew is graduating from Harvard - will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">Email me!</a></span></div>
@@ -353,13 +382,32 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="yellowline col-2 mx-auto"></div>
 			<div class="pb-5">
 				<div class="py-4 col-md-7 mx-auto text-center">
 					<h2 class="">contact</h2>
 					<div class="mb-0 contact text-center">
 						<div class="">
-							<p class="mb-5">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a>.</p>
+							<div id="mc_embed_signup">
+							<p>The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a>. You can also sign up below and I'll send you an email next time Sunday bakeday is happening.</p>
+										<!-- Begin Mailchimp Signup Form -->
+
+
+	
+<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate mb-5" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
+        <div class="clear foot">
+           <input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+        </div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
 							<a href="https://www.instagram.com/sunday.bakeday/"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="36"></a>	
 						</div>
 					</div>
