--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 			h1 a {
 				text-decoration: none;
 				}
-			
 			.pill a:hover {
 				color: #fff;
 				}
@@ -184,7 +183,8 @@
 			.faqs p {
 				color: #fed101;
 				}
-			.answer, .note {
+			.answer, .note, .contact p.answer {
+				font-size: 1rem;
 				font-family: 'Open Sans', sans-serif;
 				}
 			.note {
@@ -391,7 +391,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 					<div class="mb-0 contact text-center">
 						<div class="">
 							<div id="mc_embed_signup">
-							<p>The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a>. You can also sign up below and I'll send you an email next time Sunday bakeday is happening.</p>
+							<p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a>.</p><p class="answer">You can also sign up below and I'll send you an email next time Sunday bakeday is happening.</p>
 										<!-- Begin Mailchimp Signup Form -->
 
 
@@ -417,5 +417,4 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 		</div>
 	</body>
 </html>
-
 
