--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 				font-size: 2rem;
 				color: #fed101;
 				}
+			h2.notThisWeek {
+				font-size: 32px;
+			}
 			h3 {
 				font-size: 1.5rem;
 				color: #fed101;
@@ -53,6 +56,22 @@
 				font-size: 1.4rem;
 				color: #fff;
 				}
+			.card-body h2.notThisWeek {
+				font-size: 4.4rem;
+				color: #fff;
+			   animation-duration: 900ms;
+			   animation-name: blink;
+			   animation-iteration-count: infinite;
+			   animation-direction: alternate;
+			}
+@keyframes blink {
+   from {
+      opacity: 1;
+   }
+   to {
+      opacity: 0.5;
+   }
+ }
 			@media (min-width: 992px) { 
 				h1 {
 					font-size: 5rem;
@@ -60,6 +79,9 @@
 				h2 {
 					font-size: 3.5rem;
 					}
+				h2.notThisWeek {
+					font-size: 8rem;
+				}
 				.logo {
 					width: 180px;
 					height: 180px;
@@ -278,7 +300,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 		</div>
 		<div class="album text-center">
 			<h2 class="thisweeksmenu fade-in">this week's menu</h2>
-			<div class="container">
+			<!--<div class="container">
 				<div class="row ">
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
@@ -317,7 +339,21 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 						</div>
 					</div>
 				</div>
-			</div>
+			</div>-->
+<div class="container">
+				<div class="row ">
+					<div class="col-12 col-md-6 col-lg-12">
+						<div class="card">
+							<div class="card-body fade-in">
+		    					<h2 class="notThisWeek">no bakeday this sunday!</h2>
+								<p class="card-text">I'm sleeping in this weekend! But there's a form at the bottom of this page where you can sign up to get an email next time I'm doing bakeday. People have actually used it. No, I can't believe it either.&nbsp; &nbsp;&nbsp;</p>
+<div class="d-flex justify-content-between align-items-center"></div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>			
 		</div>
 		<div class="bottomWrapper">
 			<div class="bottom pt-5">
@@ -325,7 +361,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 					<h2 class="">how it works</h2>
 					<ol class="mb-0 howitworks text-center">
 						<li class="py-2"><span>Pick any combination of 4 pastries.</span></li>
-						<li class="py-2 notewrapper"><span>Send me $20.</span><span class="note pt-2">Include your order and address in the message with your payment!</span></li>
+						<li class="py-2 notewrapper"><span>Send me $20.</span><span class="note pt-2">Include your order and address in the message with your payment! Also, like, tell me what buzzer to press if you live in a condo or whatever.&nbsp; &nbsp;</span></li>
 						<li class="py-2"><span>A box of pastries will be delivered to you on Sunday morning before 10am.</span></li>
 					</ol>
 				</div>
