--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 						<div class="card">
 							<div class="card-body fade-in">
 		    					<h2 class="notThisWeek">no bakeday this sunday!</h2>
-								<p class="card-text">I'm sleeping in this weekend! But there's a form at the bottom of this page where you can sign up to get an email next time I'm doing bakeday. People have actually used it. No, I can't believe it either.&nbsp; &nbsp;&nbsp;</p>
+								<p class="card-text">I'm sleeping in this weekend! But there's a form at the bottom of this page where you can sign up to get an email next time I'm doing bakeday. People have actually used it. No, I can't believe it either.</p>
 <div class="d-flex justify-content-between align-items-center"></div>
 							</div>
 						</div>
@@ -361,7 +361,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 					<h2 class="">how it works</h2>
 					<ol class="mb-0 howitworks text-center">
 						<li class="py-2"><span>Pick any combination of 4 pastries.</span></li>
-						<li class="py-2 notewrapper"><span>Send me $20.</span><span class="note pt-2">Include your order and address in the message with your payment! Also, like, tell me what buzzer to press if you live in a condo or whatever.&nbsp; &nbsp;</span></li>
+						<li class="py-2 notewrapper"><span>Send me $20.</span><span class="note pt-2">Include your order and address in the message with your payment! Also tell me what buzzer to press if you live in a condo or whatever.</span></li>
 						<li class="py-2"><span>A box of pastries will be delivered to you on Sunday morning before 10am.</span></li>
 					</ol>
 				</div>
