--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#venmoCollapse" role="button">Venmo</a>
 									</p>
 									<p class="contactInfo collapse" id="venmoCollapse">
-										<a href="https://venmo.com/richard-crawford-24">@richard.crawford-24</a>
+										<a href="https://venmo.com/sundaybakeday">@sundaybakeday</a>
 									</p>
 								</div>
 							</div>
@@ -401,7 +401,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#cashCollapse" role="button">CashApp</a>
 									</p>
 									<p class="contactInfo collapse" id="cashCollapse">
-										<a href="https://cash.app/richardcrawford24">$richardcrawford24</a>
+										<a href="https://cash.app/sundaybakeday">$sundaybakeday</a>
 									</p>
 								</div>
 							</div>
