--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 					<p class="pb-2 howitworks text-center">Order by noon on Friday for delivery on Sunday.</p>
 					<div class="container">
 						<div class="row">
-							<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
+							<div class="col-xs-12 col-md-4 mb-2">
 								<div class="pill" id="venmoPill">
 									<p class="pillTitle mb-0">
 										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#venmoCollapse" role="button">Venmo</a>
@@ -395,7 +395,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 									</p>
 								</div>
 							</div>
-							<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
+							<div class="col-xs-12 col-md-6 mb-2">
 								<div class="pill" id="cashPill">
 									<p class="pillTitle mb-0">
 										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#cashCollapse" role="button">CashApp</a>
@@ -405,16 +405,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 									</p>
 								</div>
 							</div>
-							<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
-								<div class="pill" id="messengerPill">
-									<p class="pillTitle mb-0">
-										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#messengerCollapse" role="button">Messenger</a>
-									</p>
-									<p class="contactInfo collapse" id="messengerCollapse">
-										<a href="http://m.me/richardcrawford24">@richardcrawford24</a>
-									</p>
-								</div>
-							</div>							
+													
 						</div>
 						<p class="mb-0 pt-3 answer">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> and we'll figure it out.</p>
 					</div>
