--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 						<div class="card">
 							<div class="card-body fade-in">
 		    					<h2 class="notThisWeek">no bakeday this sunday!</h2>
-								<p class="card-text">I'm sleeping in this weekend! But there's a form at the bottom of this page where you can sign up to get an email next time I'm doing bakeday. People have actually used it. No, I can't believe it either.</p>
+								<p class="card-text">I'm sleeping in this weekend! But there's a form at the bottom of this page where you can sign up to get an email next time I'm doing bakeday.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
 						</div>
