--- a/index.html
+++ b/index.html
@@ -314,7 +314,6 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 			<div class="container">
 				<div class="row ">
 					<div class="col-12 col-md-6 col-lg-3 position-relative">
-						<span class="badge rounded-pill position-absolute">NEW!</span>
 						<div class="card">
 							<div class="card-body fade-in">
 								
@@ -385,8 +384,8 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 					<h2 class="">order now</h2>
 					<p class="pb-2 howitworks text-center">Order by noon on Friday for delivery on Sunday.</p>
 					<div class="container">
-						<div class="row">
-							<div class="col-xs-12 col-md-6 mb-2">
+						<div class="row justify-content-md-center">
+							<div class="col-xs-12 col-md-4 mb-2">
 								<div class="pill" id="venmoPill">
 									<p class="pillTitle mb-0">
 										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#venmoCollapse" role="button">Venmo</a>
@@ -396,7 +395,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 									</p>
 								</div>
 							</div>
-							<div class="col-xs-12 col-md-6 mb-2">
+							<div class="col-xs-12 col-md-4 mb-2">
 								<div class="pill" id="cashPill">
 									<p class="pillTitle mb-0">
 										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#cashCollapse" role="button">CashApp</a>
