--- a/index.html
+++ b/index.html
@@ -388,20 +388,18 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 							<div class="col-xs-12 col-md-4 mb-2">
 								<div class="pill" id="venmoPill">
 									<p class="pillTitle mb-0">
-										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#venmoCollapse" role="button">Venmo</a>
-									</p>
-									<p class="contactInfo collapse" id="venmoCollapse">
-										<a href="https://venmo.com/sundaybakeday">@sundaybakeday</a>
+										<a class="infoLink" href="https://venmo.com/sundaybakeday">Venmo
+										<br/>
+										@sundaybakeday</a>
 									</p>
 								</div>
 							</div>
 							<div class="col-xs-12 col-md-4 mb-2">
 								<div class="pill" id="cashPill">
 									<p class="pillTitle mb-0">
-										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#cashCollapse" role="button">CashApp</a>
-									</p>
-									<p class="contactInfo collapse" id="cashCollapse">
-										<a href="https://cash.app/sundaybakeday">$sundaybakeday</a>
+										<a class="infoLink" href="https://cash.app/sundaybakeday">CashApp
+										<br/>
+										$sundaybakeday</a>
 									</p>
 								</div>
 							</div>
