--- a/index.html
+++ b/index.html
@@ -237,6 +237,15 @@
 			  -o-animation: fadeIn 1s;
 			  -ms-animation: fadeIn 1s;
 			}
+			.infoLink {
+				text-decoration: none;
+				}
+			.infoLink:hover {
+				text-decoration: underline;
+				}
+			.infoLink span {
+			    font-family: 'Open Sans', sans-serif;
+				}
 			.album {
 			  background-color: #fed101;
 			}
@@ -390,7 +399,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 									<p class="pillTitle mb-0">
 										<a class="infoLink" href="https://venmo.com/sundaybakeday">Venmo
 										<br/>
-										@sundaybakeday</a>
+										<span>@sundaybakeday</span></a>
 									</p>
 								</div>
 							</div>
@@ -399,7 +408,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 									<p class="pillTitle mb-0">
 										<a class="infoLink" href="https://cash.app/sundaybakeday">CashApp
 										<br/>
-										$sundaybakeday</a>
+										<span>$sundaybakeday</span></a>
 									</p>
 								</div>
 							</div>
@@ -454,5 +463,4 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 			</div>
 		</div>
 	</body>
-
-		</html>
+</html>
