--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 				}
 			.pill a:hover {
 				color: #FC01F3;
-				text-decoration: none;
+				text-decoration: underline;
 				}
 			.faqs p, .contact p {
 				font-size: 1.2rem;
@@ -249,7 +249,6 @@
 			.album {
 			  background-color: #fed101;
 			}
-			
 			.badge {
 				z-index: 1;
 				top: -5px;
@@ -273,7 +272,7 @@
 
 			@-o-keyframes fadeIn {
 			  0% {opacity:0;}
-			 100% {opacity:1;}
+			  100% {opacity:1;}
 			}
 
 			@-ms-keyframes fadeIn {
