--- a/index.html
+++ b/index.html
@@ -322,21 +322,11 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 		<div class="album text-center">
 			<h2 class="thisweeksmenu fade-in">this week's menu</h2>
 			<div class="container">
-				<div class="row ">
-					<div class="col-12 col-md-6 col-lg-3 position-relative">
-						<div class="card">
-							<div class="card-body fade-in">
-								
-								<h2>Cranberry mind boggler</h2>
-								<p class="card-text">A cranberry/white chocolate chip cookie. Guaranteed to boggle your mind.<sup>*</sup></p>
-								<div class="d-flex justify-content-between align-items-center"></div>
-						  </div>
-						</div>
-					</div>					
+				<div class="row ">				
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in">
-		    						<h2>Croissant</h2>
+		    						<h2>croissant</h2>
 								<p class="card-text">Everyone loves a croissant! Made with organic flour and really expensive butter. </p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
@@ -345,7 +335,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2>Pain au chocolat</h2>
+								<h2>pain au chocolat</h2>
 								<p class="card-text">What's better than a croissant? A croissant with chocolate inside it!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
@@ -354,12 +344,21 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2>Blueberry scone</h2>
+								<h2>blueberry scone</h2>
 								<p class="card-text">Welcome to the scone zone. Made with organic flour and giant organic blueberries.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
 						</div>
 					</div>
+					<div class="col-12 col-md-6 col-lg-3 position-relative">
+						<div class="card">
+							<div class="card-body fade-in">
+								<h2>choconut cookie</h2>
+								<p class="card-text">A huge, chewy, chocolate chip cookie with coconut flakes and pecans.</p>
+								<div class="d-flex justify-content-between align-items-center"></div>
+						  	</div>
+						</div>
+					</div>						
 				</div>
 			</div>
 			<!--<div class="container">
@@ -415,7 +414,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 							</div>
 													
 						</div>
-						<p class="mb-0 pt-3 answer">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> and we'll figure it out.</p>
+						<p class="mb-0 pt-3 answer">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com">email me</a> and we'll figure it out.</p>
 					</div>
 				</div>
 			</div>
@@ -425,8 +424,8 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 					<h2>faqs</h2>
 					<div class="mb-0 faqs text-center">
 						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool.</span></div>
-						<div class="mb-3"><p class="mb-1">My nephew is graduating from Harvard - will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">Email me!</a></span></div>
-						<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> with requests for next week!</span></div>
+						<div class="mb-3"><p class="mb-1">My nephew is graduating from Harvard - will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com">Email me!</a></span></div>
+						<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:sunday.bakeday.69@gmail.com">email me</a> with requests for next week!</span></div>
 					</div>
 				</div>
 			</div>
@@ -438,7 +437,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 					<div class="mb-0 contact text-center">
 						<div class="">
 							<div id="mc_embed_signup">
-							<p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a>.</p><p class="answer">You can also sign up below and I'll send you an email next time Sunday bakeday is happening.</p>
+							<p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com">email me</a>.</p><p class="answer">You can also sign up below and I'll send you an email next time Sunday bakeday is happening.</p>
 										<!-- Begin Mailchimp Signup Form -->
 
 
