--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 
 <!--End mc_embed_signup-->
 							<a href="https://www.instagram.com/sunday.bakeday/"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="36"></a>
-							<p class="disclaimer mt-5">*Not legally guaranteed to boggle your mind.</p>
+							<!--<p class="disclaimer mt-5">*Not legally guaranteed to boggle your mind.</p>-->
 						</div>
 					</div>
 				</div>
