--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 					<div class="col-12 col-md-12 col-lg-12 position-relative">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2>EXPERIMENTAL BONUS ITEM - ADD $2!</h2>
-								<p class="card-text">EXPERIMENTAL PASTRY from the Sunday Bakeday laboratory. It might be a croissant filled with blueberry goat cheese. It might be a Nutella pain au chocolat. For an extra $2 add one of whatever I'm trying out this week to your order. These are HIGHLY EXPERIMENTAL TOP SECRET PASTRIES FROM THE FUTURE and might not turn out great. Or they might turn out amazing! Order at your own risk!</p>
+								<h2>experimental bonus item - ADD $2!</h2>
+								<p class="card-text">EXPERIMENTAL PASTRY from the Sunday Bakeday laboratory. It might be a croissant filled with blueberry goat cheese. It might be a Nutella pain au chocolat. For an extra $2 add one of whatever I'm trying out this week to your order. These are HIGHLY EXPERIMENTAL TOP SECRET PASTRIES FROM THE DISTANT FUTURE and might not turn out great. Or they might turn out amazing! Order at your own risk!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 						  	</div>
 						</div>
@@ -158,6 +158,7 @@
 								</form>
 							</div>
 							<a href="https://www.instagram.com/sunday.bakeday/"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="36"></a>
+							<!--<p class="disclaimer mt-5">*Not legally guaranteed to boggle your mind.</p>-->
 						</div>
 					</div>
 				</div>
