--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 								</a>
 							</div>												
 						</div>
-						<p class="mb-0 pt-3 answer">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com">email me</a> and we'll figure it out.</p>
+						<p class="mb-0 pt-3 answer">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com">email me</a> and we'll figure it out.</p>
 					</div>
 				</div>
 			</div>
