--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<h2>faqs</h2>
 					<div class="mb-0 faqs text-center">
 						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool.</span></div>
-						<div class="mb-3"><p class="mb-1">My nephew is graduating from Harvard - will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com">Email me!</a></span></div>
+						<div class="mb-3"><p class="mb-1">My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com">Email me!</a></span></div>
 						<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:sunday.bakeday.69@gmail.com">email me</a> with requests for next week!</span></div>
 					</div>
 				</div>
