--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Fredoka+One&family=Open+Sans&display=swap" rel="stylesheet">
-		<link href="http://sundaybakeday.com/style.css" rel="stylesheet" type="text/css">
+		<link href="http://www.sundaybakeday.com/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="top text-center">
