--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 }
  .top {
      width: 100%;
-     margin: auto;
+     margin: 0 auto;
      background: #FC01F3;
      padding-bottom: 20px;
      margin-bottom: 20px;
