--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Fredoka+One&family=Open+Sans&display=swap" rel="stylesheet">
 		<link href="http://www.sundaybakeday.com/style.css" rel="stylesheet" type="text/css">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-GHEVQK4VSF"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-GHEVQK4VSF');
+		</script>		
 		<style>
  html, body {
      line-height: 1.3;
