--- a/index.html
+++ b/index.html
@@ -418,6 +418,10 @@
          margin:0;
     }
 }
+svg {
+	position: relative;
+	top: -1px;
+}
 </style>
 	</head>
 	<body>
@@ -530,7 +534,7 @@
 								</a>
 							</div>												
 						</div>
-						<p class="mb-0 pt-3 answer">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com">email me</a> and we'll figure it out.</p>
+						<p class="mb-0 pt-3 answer font-italic"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 20 16"><path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/></svg>Venmo and CashApp transactions are private.</p>
 					</div>
 				</div>
 			</div>
@@ -539,7 +543,8 @@
 				<div class="py-4 col-md-12 mx-auto text-center">
 					<h2>faqs</h2>
 					<div class="mb-0 faqs text-center">
-						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool.</span></div>
+						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool. If you live out of town you're welcome to pick them up!</span></div>
+						<div class="mb-3"><p class="mb-1">I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</p><span class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:sunday.bakeday.69@gmail.com">email</a>.</span></div>
 						<div class="mb-3"><p class="mb-1">My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com">Email me!</a></span></div>
 						<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:sunday.bakeday.69@gmail.com">email me</a> with requests for next week!</span></div>
 					</div>
