--- a/index.html
+++ b/index.html
@@ -541,9 +541,9 @@
 					<h2>faqs</h2>
 					<div class="mb-0 faqs text-center">
 						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool. If you live out of town you're welcome to pick them up!</span></div>
-						<div class="mb-3"><p class="mb-1">I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</p><span class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:sunday.bakeday.69@gmail.com">email</a>.</span></div>
-						<div class="mb-3"><p class="mb-1">My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com">Email me!</a></span></div>
-						<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:sunday.bakeday.69@gmail.com">email me</a> with requests for next week!</span></div>
+						<div class="mb-3"><p class="mb-1">I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</p><span class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>.</span></div>
+						<div class="mb-3"><p class="mb-1">My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:orders@sundaybakeday.com">Email me!</a></span></div>
+						<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:orders@sundaybakeday.com">email me</a> with requests for next week!</span></div>
 					</div>
 				</div>
 			</div>
@@ -554,7 +554,7 @@
 					<div class="mb-0 contact text-center">
 						<div class="">
 							<div id="mc_embed_signup">
-								<p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com">email me</a>.</p><p class="answer">You can also sign up below and I'll send you an email next time Sunday bakeday is happening.</p>
+								<p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:orders@sundaybakeday.com">email me</a>.</p><p class="answer">You can also sign up below and I'll send you an email next time Sunday bakeday is happening.</p>
 								<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate mb-5" target="_blank" novalidate>
     								<div id="mc_embed_signup_scroll">
 									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
