--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>sunday bakeday</title>
+		<title>Sunday Bakeday</title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" src="/css/animate.css" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -554,7 +554,7 @@
 					<div class="mb-0 contact text-center">
 						<div class="">
 							<div id="mc_embed_signup">
-								<p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:orders@sundaybakeday.com">email me</a>.</p><p class="answer">You can also sign up below and I'll send you an email next time Sunday bakeday is happening.</p>
+								<p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:orders@sundaybakeday.com">email me</a>.</p><p class="answer">You can also sign up below and I'll send you an email next time Sunday Bakeday is happening.</p>
 								<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate mb-5" target="_blank" novalidate>
     								<div id="mc_embed_signup_scroll">
 									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
