--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@
 			</div>
 		</div>
 		<div class="album text-center">
-			<h2 class="thisweeksmenu fade-in">this week's menu</h2>
-			<!--<div class="container">
+			<h2 class="thisweeksmenu fade-in">menu for Sunday February 13th</h2>
+			<div class="container">
 				<div class="row ">				
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
@@ -474,7 +474,7 @@
 						  	</div>
 						</div>
 					</div>	
-					<div class="col-12 col-md-12 col-lg-12 position-relative">
+					<!--<div class="col-12 col-md-12 col-lg-12 position-relative">
 						<div class="card">
 							<div class="card-body fade-in">
 								<h2>experimental bonus item - ADD $2!</h2>
@@ -482,10 +482,10 @@
 								<div class="d-flex justify-content-between align-items-center"></div>
 						  	</div>
 						</div>
-					</div>						
+					</div>-->						
 				</div>
-			</div>-->
-			<div class="container">
+			</div>
+			<!--<div class="container">
 				<div class="row ">
 					<div class="col-12 col-md-6 col-lg-12">
 						<div class="card">
@@ -497,7 +497,7 @@
 						</div>
 					</div>
 				</div>
-			</div>			
+			</div>-->			
 		</div>
 		<div class="bottomWrapper">
 			<div class="bottom pt-5">
