--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 			</div>
 			<div class="yellowline col-2 mx-auto"></div>
 			<div class="">
-				<div class="py-4 col-md-12 mx-auto text-center">
+				<div class="py-4 col-md-10 col-lg-7 mx-auto text-center">
 					<h2>faqs</h2>
 					<div class="mb-0 faqs text-center">
 						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool. If you live out of town you're welcome to pick them up!</span></div>
