--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 		     -moz-border-radius: 3px;
 		     border-radius: 3px;
 		     letter-spacing: .03em;
-		     color: #5c1e59;
+		     color: #FC01F3;
 		     background-color: #FED101;
 		     box-sizing:border-box;
 		     height:32px;
@@ -365,9 +365,10 @@
 		     display: inline-block;
 		     margin: 0;
 		     transition: all 0.23s ease-in-out 0s;
+	             font-weight: bold;
 		}
 		 #mc_embed_signup .button:hover {
-		    background-color:#777;
+		    background-color:#1F48D6;
 		     cursor:pointer;
 		}
 		 #mc_embed_signup div#mce-responses {
