--- a/index.html
+++ b/index.html
@@ -368,8 +368,9 @@
 	             font-weight: bold;
 		}
 		 #mc_embed_signup .button:hover {
-		    background-color:#1F48D6;
+		     background-color:#1F48D6;
 		     cursor:pointer;
+	             color: #FFF;
 		}
 		 #mc_embed_signup div#mce-responses {
 		    float:left;
