--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 		</div>
 		<div class="album text-center">
 			<h2 class="thisweeksmenu fade-in">menu for Sunday February 13th</h2>
-			<div class="container">
+			<!--<div class="container">
 				<div class="row ">				
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
@@ -476,7 +476,7 @@
 						  	</div>
 						</div>
 					</div>	
-					<!--<div class="col-12 col-md-12 col-lg-12 position-relative">
+					<div class="col-12 col-md-12 col-lg-12 position-relative">
 						<div class="card">
 							<div class="card-body fade-in">
 								<h2>experimental bonus item - ADD $2!</h2>
@@ -484,22 +484,22 @@
 								<div class="d-flex justify-content-between align-items-center"></div>
 						  	</div>
 						</div>
-					</div>-->						
+					</div>						
 				</div>
-			</div>
-			<!--<div class="container">
+			</div>-->
+			<div class="container">
 				<div class="row ">
 					<div class="col-12 col-md-6 col-lg-12">
 						<div class="card">
 							<div class="card-body fade-in">
-		    					<h2 class="notThisWeek">no bakeday this sunday!</h2>
-								<p class="card-text">I'm sleeping in this weekend! But there's a form at the bottom of this page where you can sign up to get an email next time I'm doing bakeday.</p>
+		    					<h2 class="notThisWeek">sold out!</h2>
+								<p class="card-text">Like Metallica in the 90s, orders for 2/13 have sold out! Sign up for the mailing list below to be the first to know next time it's happening!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>-->			
+			</div>			
 		</div>
 		<div class="bottomWrapper">
 			<div class="bottom pt-5">
